<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.naubyra.tempconv.Kelvin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kel"
            android:gravity="start"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_kel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:gravity="center"
            android:inputType="numberDecimal"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="konversikel"
            android:id="@+id/but_kel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cvt"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rea"
            android:gravity="start"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/reamur_kel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fah"
            android:gravity="start"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/fahrenheit_kel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cel"
            android:gravity="start"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/celsius_kel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
</ScrollView>